<resources>
    <string name="app_name">Space App</string>

    <string name="create_space_vehicle">Uzay Aracı Oluştur</string>
    <string name="space_stations">Uzay İstasyonları</string>
    <string name="my_favorite_stations">Favorilerim</string>

    <string name="info_create_vehicle">* Uzay aracının üç ana özelliğinin toplamı on beş olmalıdır.</string>
    <string name="info_create_vehicle_validation">Uzay aracının üç ana özelliğinin toplamı on beş olmalıdır.</string>

    <string name="not_empty_vehicle_name">Uzay aracının ismi boş bırakılamaz.</string>

    <string name="bottom_menu_item_one">İstasyon</string>
    <string name="bottom_menu_item_two">Favoriler</string>
    
    <string name="durability">Dayanıklılık</string>
    <string name="speed">Hız</string>
    <string name="capacity">Kapasite</string>

    <string name="search_hint">Uzay istasyonu ara …</string>
    
    <string name="enter_space_vehicle_name">Uzay aracının adını giriniz</string>
    <string name="distribute_the_points">Dağıtılacak Puan</string>
    <string name="go_on">Devam Et</string>

    <string name="no_favorite_found">Favoriye alınmış istasyon bulunamadı.</string>

    <string name="vehicle_validation_info">Uzay araç ismi boş geçilemez.</string>
    <string name="value_validation_info">Değerler sıfır olamaz</string>

    <string name="no_found_station">Uzay istasyonu bulunamadı</string>
    <string name="travel">Seyahat Et</string>

    <string name="current_station">Mevcut İstasyon:</string>

    <string name="ugs">Uzay Giysi Sayısı</string>
    <string name="eus">Evrensel Uzay Süresi</string>
    <string name="ds">Dayanıklılık Süresi</string>

    <string name="delivery_completed_info">Teslimat tamamlanmıştır artık seyahat edemezsiniz</string>
</resources>