<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="mehmetbalbay.spaceApp.ui.space_vehicle.create.CreateVehicleViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/point_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/point_container"
            android:layout_alignBottom="@+id/point_container"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/point_container"
            android:gravity="center"
            android:text="@string/distribute_the_points"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:text="@string/distribute_the_points" />

        <FrameLayout
            android:id="@+id/point_container"
            android:layout_width="@dimen/point_container_size"
            android:layout_height="@dimen/point_container_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/vehicle_point_back">

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@{String.valueOf(viewModel.distributePointLiveData)}"
                android:textSize="24sp"
                tools:text="15" />
        </FrameLayout>

        <View
            android:id="@+id/point_container_line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_below="@id/point_container"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:background="@color/vehicle_point_border" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/space_vehicle_text_input_l"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/point_container_line"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/enter_space_vehicle_name"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/space_vehicle_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/go_on_btn"
            android:layout_below="@+id/space_vehicle_text_input_l"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="36dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durability"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/durabilitySB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/speedSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacity"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/capacitySB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/go_on_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:background="@drawable/go_on_button_back"
            android:paddingStart="20dp"
            android:paddingTop="14dp"
            android:paddingEnd="20dp"
            android:paddingBottom="14dp"
            android:text="@string/go_on"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</layout>