<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="mehmetbalbay.spaceApp.ui.station.StationViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/space_stations"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_size" />

        <View
            android:id="@+id/info_container_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:background="@color/vehicle_point_border" />

        <TextView
            android:id="@+id/space_vehicle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/search_bar_card"
            android:layout_alignTop="@id/durability_time_card"
            android:layout_alignBottom="@id/durability_time_card"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="WhartonX" />

        <androidx.cardview.widget.CardView
            android:id="@+id/remain_health_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_container_line"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/space_vehicle_name"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="100" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/durability_time_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_container_line"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/remain_health_card"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/durability_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/search_bar_card"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_bar_height"
            android:layout_below="@id/space_vehicle_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_hint"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_baseline_search_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/no_found_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/current_station"
            android:layout_below="@id/search_bar_card"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/no_found_station"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/travel_station_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_bar_card"
            android:layout_alignBottom="@+id/travel_station_recycler"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:indeterminateTint="@color/bottom_icon_active" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/travel_station_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/travel_property_contaniner"
            android:layout_below="@id/search_bar_card"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_travel_station"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/travel_property_contaniner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/current_station"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ugs_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/travel_property_text_size"
                tools:text="Uzay Gisi Sayısı\n10000" />

            <TextView
                android:id="@+id/eus_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/travel_property_text_size"
                tools:text="Evrensel Uzay Süresi\n180" />

            <TextView
                android:id="@+id/ds_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/travel_property_text_size"
                tools:text="Dayanıklılık\n20000" />

        </LinearLayout>

        <TextView
            android:id="@+id/current_station_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/current_station"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/current_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/current_station_tv"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/current_station_tv"
            android:text="@{viewModel.getCurrentStationName()}"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Tgvslxp" />

    </RelativeLayout>
</layout>